--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -41,7 +41,7 @@ export const projects = projectMetadata;
             : null;
 
           return (
-            <div class="block allow-transition hover:scale-[1.02] bg-white/50 dark:bg-dark-bg/90 rounded-xl p-4 shadow-sm dark:shadow-[0_4px_6px_-1px_rgba(255,255,255,0.05),0_2px_4px_-2px_rgba(255,255,255,0.05),0_-1px_3px_0_rgba(255,255,255,0.03)]">
+            <div class="block allow-transition hover:scale-[1.02] bg-white/50 dark:bg-dark-bg/90 rounded-xl p-4 border border-slate-200 dark:border-slate-700 shadow-[0_2px_4px_rgba(0,0,0,0.05),0_-1px_2px_0_rgba(0,0,0,0.02)] dark:shadow-[0_4px_6px_-1px_rgba(255,255,255,0.05),0_2px_4px_-2px_rgba(255,255,255,0.05),0_-1px_3px_0_rgba(255,255,255,0.03)]">
               <div class="flex flex-col items-center text-center">
                 <div class="h-20 w-20 mb-4 relative">
                   {lightLogoImage && (
