--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,11 +40,10 @@ if (cfToken) {
   <Header name={name} description={description} />
   <div class="flex flex-col pt-5 gap-y-5 grow">
     <p>
-      Hi, I'm Michael, and I'm passionate about writing high-quality code. I
-      believe in continuous improvement (1.01<sup>365</sup>) , always seeking
-      new knowledge and better ways to implement it. I'm driven by the
-      opportunity to work on and build products that make a positive impact on
-      people and the world.
+      Hello, I'm Michael. My core passion lies in developing high-quality code,
+      fueled by a belief in continuous improvement. I'm always eager to learn
+      and apply better techniques, driven by the goal of building products that
+      genuinely benefit people and contribute positively to the world.
     </p>
     <div class="flex justify-center">
       <Turnstile
