--- a/src/pages/onlyfans.astro
+++ b/src/pages/onlyfans.astro
@@ -1,19 +1,12 @@
 ---
 import { isbot } from "isbot";
 import Layout from "../layouts/Layout.astro";
-import { randomStr } from "../utils/random";
 
-let cookie = Astro.cookies.get("astro")?.value;
-const t = new URL(Astro.request.url).searchParams.get("t");
+const cookie = Astro.cookies.get("astro")?.value;
+const homepage = new URL(Astro.request.url).searchParams.get("homepage");
 const ua = Astro.request.headers.get("User-Agent");
 
-if (!cookie && !isbot(ua)) {
-  cookie = randomStr(200);
-  Astro.cookies.set("astro", cookie, {
-    maxAge: 60 * 60 * 24 * 365,
-    expires: new Date(+new Date() + 60 * 60 * 24 * 365 * 1000),
-  });
-
+if (!cookie && !homepage && !isbot(ua)) {
   await fetch(`${import.meta.env.KV_REST_API_URL}/sadd/visitors/${cookie}`, {
     headers: {
       Authorization: `Bearer ${import.meta.env.KV_REST_API_TOKEN}`,
@@ -21,25 +14,19 @@ if (!cookie && !isbot(ua)) {
   });
 }
 
-let data = 0;
-
-if (!t) {
-  const res = await fetch(`${import.meta.env.KV_REST_API_URL}/scard/visitors`, {
-    headers: {
-      Authorization: `Bearer ${import.meta.env.KV_REST_API_TOKEN}`,
-    },
-  });
-
-  const json = await res.json();
-
-  data = json.result;
-}
+const res = await fetch(`${import.meta.env.KV_REST_API_URL}/scard/visitors`, {
+  headers: {
+    Authorization: `Bearer ${import.meta.env.KV_REST_API_TOKEN}`,
+  },
+});
+const json = await res.json();
+const count = json.result;
 ---
 
 <Layout title="Michael's OnlyFans" description="🤖🍑">
   <main class="container">
     <div class="text-xl text-center dark:text-white text-gray-900">
-      <span class="text-4xl">{data}</span>
+      <span class="text-4xl">{count}</span>
       <p>people have been here looking for my OnlyFans page.😸</p>
     </div>
   </main>
