--- a/src/pages/onlyfans.astro
+++ b/src/pages/onlyfans.astro
@@ -1,16 +1,25 @@
 ---
 import { isbot } from "isbot";
 import Layout from "../layouts/Layout.astro";
+import { randomUUID } from "node:crypto";
 
 const cookie = Astro.cookies.get("astro")?.value;
 const homepage = new URL(Astro.request.url).searchParams.get("homepage");
 const ua = Astro.request.headers.get("User-Agent");
 
-if (!cookie && !homepage && !isbot(ua)) {
+console.log(cookie, homepage, isbot(ua));
+
+if (cookie && !homepage && !isbot(ua)) {
   await fetch(`${import.meta.env.KV_REST_API_URL}/sadd/visitors/${cookie}`, {
     headers: {
       Authorization: `Bearer ${import.meta.env.KV_REST_API_TOKEN}`,
     },
+  });
+} else if (!cookie) {
+  const cookie = randomUUID();
+  Astro.cookies.set("astro", cookie, {
+    maxAge: 60 * 60 * 24 * 365 * 1000,
+    expires: new Date(+new Date() + 60 * 60 * 24 * 365 * 1000),
   });
 }
 
