--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,8 @@ export const prerender = true;
   <div class="flex flex-col pt-5 gap-y-5 grow">
     <p>
       Hello, I'm Michael. My core passion lies in developing high-quality code,
-      fueled by a belief in continuous improvement. I'm always eager to learn
-      and apply better techniques, driven by the goal of building products that
-      genuinely benefit people and contribute positively to the world.
+      fueled by a belief in continuous improvement. Let's build something
+      amazing together!
     </p>
     <Links />
     <Projects />
