--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import { Picture } from "astro:assets";
 import profileImage from "../assets/profile-pic.jpg";
+import { Image } from "astro:assets";
 
 interface Props {
   name: string;
@@ -10,11 +10,11 @@ const { name, description } = Astro.props;
 ---
 
 <div class="flex flex-col md:flex-row items-center text-center md:text-left">
-  <Picture
+  <Image
     src={profileImage}
     alt={name}
-    formats={["avif", "webp"]}
-    widths={[128, 160]}
+    widths={[256, 640]}
+    sizes={`(max-width: 430px) 256px, (min-width: 431px) 640px`}
     class="h-32 w-32 md:h-40 md:w-40 object-cover rounded-full mb-4 md:mb-0"
     loading="lazy"
   />
