--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const { name, description } = Astro.props;
     src={profileImage}
     alt={name}
     widths={[256, 640]}
-    sizes={`(max-width: 430px) 256px, (min-width: 431px) 640px`}
+    sizes={`(max-width: 430px) 256px, 640px`}
     class="h-32 w-32 md:h-40 md:w-40 object-cover rounded-full mb-4 md:mb-0"
     loading="lazy"
   />
