--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,17 @@
 ---
-import { ViewTransitions } from "astro:transitions";
+import Footer from "../components/Footer.astro";
 import ThemeToggle from "../components/ThemeToggle";
-
-interface Props {
-  title: string;
-  description: string;
-}
-
-const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content={description} />
+    <meta name="description" content="Software Engineer" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Michael Eduave</title>
     <!-- ViewTransitions disabled temporarily to fix theme toggle flash -->
     <!-- <ViewTransitions /> -->
     {import.meta.env.PROD && <script defer src="/_vercel/insights/script.js" />}
@@ -55,15 +48,14 @@ const { title, description } = Astro.props;
       })();
     </script>
   </head>
-  <body class="dark:bg-dark-bg bg-white">
+  <body class="bg-white dark:bg-gray-900">
     <div class="fixed top-5 right-5 z-50">
       <ThemeToggle client:only="react" />
     </div>
-    <main
-      class="container mx-auto p-4 text-slate-900 dark:text-white h-screen flex"
-    >
+    <main class="container mx-auto p-4 h-dvh flex max-w-2xl px-3 py-6 md:px-5">
       <div class="flex flex-col grow">
         <slot />
+        <Footer />
       </div>
     </main>
   </body>
