Fix text color Remove unused type Add footer spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -181,7 +181,7 @@ const workExperiences = [
                   </p>
                   <p class="text-xs mt-1">
                     {github && (
-                      <a class="flex gap-1" target="_blank" href={github}>
+                      <a class="flex gap-1 text-gray-500 dark:text-gray-400" target="_blank" href={github}>
                         Github <Icon name="mdi:external-link" class="text-gray-500 dark:text-gray-400 h-4 w-4 self-center" />
                       </a>
                     )}
