--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<div class="text-gray-500 text-sm grow content-end text-center">
+<div class="text-gray-500 text-sm grow content-end text-center mt-20">
   Built with <a href="https://astro.build" target="_blank">Astro</a> and
   <a href="https://tailwindcss.com" target="_blank">Tailwind CSS</a>.
 </div>
