Restore OF endpoint warming

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -43,7 +43,9 @@ import avatar from "../assets/mike-pp.png";
     </style>
   </div>
 </div>
-
+<script>
+  fetch("/of?homepage=true");
+</script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const container = document.getElementById("scratch-container");
