Minor tweaks to homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,9 +105,9 @@ const workExperiences = [
             </p>
             <p class="flex gap-1.5 justify-center md:justify-start mt-1.5 text-xs text-gray-500 dark:text-gray-400">
               <a target="_blank" href="https://linkedin.com/in/meduave" aria-label="LinkedIn link">LinkedIn</a> | 
-              <a target="_blank" href="/cv.pdf" aria-label="CV link">CV</a> | 
-              <a target="_blank" href="/of" aria-label="OF link">OF</a> | 
-              <a target="_blank" href="https://github.com/michaeljohneduave" aria-label="Github link">Github</a>
+              <a target="_blank" href="/cv.pdf" aria-label="CV link">Resumé</a> | 
+              <a target="_blank" href="/of" aria-label="OF link">OnlyFans</a> | 
+              <a target="_blank" href="https://github.com/michaeljohneduave" aria-label="Github link">GitHub</a>
             </p>
           </div>
         </div>
@@ -206,7 +206,7 @@ const workExperiences = [
               </div> */}
               <!-- Text Content -->
               <div class="text-left">
-                <h3 class="text-md font-medium text-gray-900 dark:text-gray-100">{work.role} at {work.name} | {work.year}</h3>
+                <h3 class="text-md font-medium text-gray-900 dark:text-gray-100">{work.role} at {work.name} <span class="text-xs text-gray-500 dark:text-gray-400">{work.year}</span></h3>
                 <p class="mt-0.5 text-xs text-gray-600 dark:text-gray-300">
                   {work.description}
                 </p>
