Update cv and projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const logoImports = import.meta.glob<{ default: ImageMetadata }>(
 const projects = [
   {
     name: "Pearl Chat",
-    description: "GenAI-powered personal assistant built with AWS, Google Gemini, and a Vue frontend.",
+    description: "AI-native assistant (chat and voice) that manages daily life logistics, with personas for tasks including event scheduling, pantry management, and personal finance. Aimed to support individuals and groups.",
     logo: {
       light: "pearl.svg",
       dark: "pearl.svg"
@@ -31,6 +31,12 @@ const projects = [
     url: "https://chat.meduave.com",
     github: "https://github.com/michaeljohneduave/hugin",
     show: true
+  },
+  {
+    name: "Auto Apply",
+    description: "Helps streamline job applications by automating the resume adjustment and thoughtfully filling up the application form by using the user’s provided context and static information.",
+    github: "https://github.com/michaeljohneduave/auto-applai",
+    show: true,
   },
   {
     name: "Rankfolio",
