Update work exp descriptions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,14 +71,14 @@ const workExperiences = [
   {
     name: "Euclidean",
     role: "Full Stack Developer",
-    description: "Built core modules for a mental health dashboard. Implemented serverless data exports, boosting practitioner satisfaction and onboarding efficiency.",
+    description: "Currently working on expanding the mental health platform, Gumboot Friday, for I Am Hope. Built core modules and a reworked the donation portal.",
     year: "11/2023 - Present",
     show: true
   },
   {
     name: "Specter",
     role: "Data Engineer",
-    description: "Cut AWS costs by 80% and reduced ETL durations to 1-2 days by redesigning data pipelines. Built enrichment and visualization systems to enhance client data accessibility.",
+    description: "Helped expand the data pipeline to include new data sources and improved data quality. Spearheaded the development of a client-facing dashboard for improved user experience.",
     year: "08/2020 - 02/2023",
     show: true
   },
@@ -92,7 +92,7 @@ const workExperiences = [
   {
     name: "Micab Systems",
     role: "Software Engineer",
-    description: "Built and scaled the initial real-time booking and fleet systems, raising booking success to 85%. Reduced geospatial costs by 90% and enhanced monitoring and analytics.",
+    description: "Built and improved the initial real-time booking and fleet systems, raising booking success to 85%. Reduced geospatial costs by 90% and enhanced monitoring and analytics.",
     year: "06/2016 - 11/2019",
     show: true
   },
